--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,12 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
+springdoc:
+  packages-to-scan: com.icebear2n2.todayhouse
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    path: /
+    disable-swagger-default-url: true
+    display-request-duration: true
+    operations-sorter: alpha
