FEAT: Eureka Server와 연동을 위한 User 코드 변경 및 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
-spring:
-  datasource:
 
+
+server:
+  port: 8082
+
+spring:
+  application:
+    name: community-service
+  datasource:
     url: jdbc:mysql://localhost:3306/house?serverTimezone=Asia/Seoul
     username: root
     password: qwer1234!
@@ -17,3 +23,10 @@ springdoc:
     disable-swagger-default-url: true
     display-request-duration: true
     operations-sorter: alpha
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+
+  instance:
+    instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
